Avoid cropping the lower end of the video. Refactor js code a bit

--- a/css/main.css
+++ b/css/main.css
@@ -506,7 +506,7 @@ form .notice {
   Header */
 
 header {
-  padding-bottom: 118px;
+  padding-bottom: 102px;
   background-color: #081445;
   background-image: url("../images/main-background.png");
   background-size: cover;
